# Enterprise-RAG

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  THIRD-PARTY-PROGRAMS  globalLocators.js  ibm_catalog.json  package-lock.json  package.json  playwright.config.js
.celine/: BuildConfig.json  README.md
.github/: BanditConfig.yaml  BuildConfig.json  BuildConfigLimited.json  BuildConfigProtex.json  CODEOWNERS  README.md  dependabot.yml  issue_template.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: issue_template.md
.github/linters/: .hadolint.yaml  .python-lint  .shellcheckrc  .yaml-lint.yml
.github/slim-tags/: run.sh
.github/workflows/: bdba-scan.yml  comment.yml  conjur-test.yml  continuous-deployment.yml  linter.yml  microservice-test.yml  protex-scan.yml  reuse-get-test-matrix.yml  scan.yml  slim-release.yml  slim-tag.yml  trivy-scan.yml  unit-tests.yml  validation-embeddings.yml  validation-microservices.yml  verify-external-pr.yml
auth/: keycloak_realm_creator.sh
auth/apis-crd-helm/: values.yaml
auth/apisix-helm/: values.yaml
auth/keycloak-config/: ERAG-realm-export.json
deployment/: .gitignore  COMPLETION.md  INSTALLER_USAGE.md  README.md  README_ANSIBLE.md  README_bash.md  ansible.cfg  check_prerequisites.sh  check_prerequisites_remote.sh  configure.sh  credentials_utils.sh  images.yaml  install_chatqna.sh  installer.sh  one_click_chatqna.sh  prepare_remote.sh  requirements.txt  requirements.yaml  set_values.sh  test_connection.sh  test_dataprep.sh  update_images.sh  version.yaml
deployment/auth/: README.md  get_secret.sh  keycloak_configurator.sh  keycloak_realm_creator.sh
deployment/client_test/: client-test.yaml
deployment/configs/: ingress-ui.yaml  ingress-values.yaml  openssl.cnf
deployment/fingerprint/: values.yaml
deployment/ingress/: values.yaml
deployment/microservices-connector/: Dockerfile.manager  Dockerfile.router  Makefile  PREPARE_GAUDI.md  README.md  clear_cluster.sh  configure.sh  go.mod  go.sum  install_chatqna.sh  install_go.sh  one_click_chatqna.sh  run_RAG.sh  run_curl.sh  set_envs.sh  set_values.sh  test_connection.sh  (+2 more)
docs/: Enterprise_RAG_Application_Features.md  README.md  README_dev.md  UI_features.md  Verify_UI.md  accuracy_tuning_tips.md  ad_federation_on_keycloak.md  advanced_configuration.md  application_deployment_guide.md  backup.md  building_images.md  cluster_deployment_guide.md  configure_pipeline.md  debug_tool.md  docker_images_list.md  eks_deployment.md  infrastructure_components_guide.md  install_kubernetes.md  istio.md  multifactor_authentication.md  performance_tuning_tips.md  pod_resource_allocation.md  prerequisites.md  single_sign_on_configuration_on_keycloak.md  switching_pipelines.md  tdx.md  telemetry.md  upgrade.md
src/: .dockerignore  README.md  tox.ini
src/comps/chat_history/impl/microservice/: .env  Dockerfile  Dockerfile.release  pyproject.toml
src/comps/chat_history/impl/microservice/.dockerhub/: overview.md  short-description.txt
src/comps/docsum/impl/microservice/: .dockerignore  .env  Dockerfile  Dockerfile.release  pyproject.toml
src/comps/docsum/impl/microservice/.dockerhub/: overview.md  short-description.txt
src/comps/embeddings/impl/model_server/mosec/docker/: .env  Dockerfile  compliance-conf.yml  docker-compose.yaml  pyproject.toml  server-ipex.py
src/comps/embeddings/impl/model_server/mosec/docker/.dockerhub/: overview.md
src/comps/embeddings/impl/model_server/ovms/docker/: .env  Dockerfile  compliance-conf.yml  docker-compose.yaml  entrypoint.sh  pyproject.toml
src/comps/embeddings/impl/model_server/ovms/docker/.dockerhub/: overview.md
src/comps/hierarchical_dataprep/impl/microservice/: .env  Dockerfile  Dockerfile.release  pyproject.toml
src/comps/hierarchical_dataprep/impl/microservice/.dockerhub/: overview.md
src/comps/ingestion/impl/microservice/: .env  Dockerfile  compliance-conf.yml  pyproject.toml  requirements.txt
src/comps/ingestion/impl/microservice/.dockerhub/: overview.md
src/comps/late_chunking/impl/microservice/: .env  Dockerfile  Dockerfile.release  compliance-conf.yml  pyproject.toml
src/comps/late_chunking/impl/microservice/.dockerhub/: overview.md  short-description.txt
src/comps/namespace_status_watcher/impl/microservice/: .env  Dockerfile  Dockerfile.release  pyproject.toml
src/comps/namespace_status_watcher/impl/microservice/.dockerhub/: overview.md  short-description.txt
src/comps/prompt_template/impl/microservice/: .env  Dockerfile  pyproject.toml  requirements.txt
src/comps/prompt_template/impl/microservice/.dockerhub/: overview.md
src/comps/query_rewrite/impl/microservice/: .env  Dockerfile  pyproject.toml
src/comps/reranks/impl/model_server/torchserve/docker/: .env  Dockerfile  compliance-conf.yml  config.properties  docker-compose.yaml  entrypoint.sh  pyproject.toml
src/comps/reranks/impl/model_server/torchserve/docker/.dockerhub/: overview.md
src/comps/retrievers/impl/model_server/ovms/docker/: .env  Dockerfile  docker-compose.yaml  entrypoint.sh  pyproject.toml
src/comps/text_compression/impl/microservice/: .env  Dockerfile  compliance-conf.yml  pyproject.toml
src/comps/text_compression/impl/microservice/.dockerhub/: overview.md
src/comps/text_extractor/impl/microservice/: .env  Dockerfile  pyproject.toml
src/comps/text_extractor/impl/microservice/.dockerhub/: overview.md
src/comps/text_splitter/impl/microservice/: .env  Dockerfile  compliance-conf.yml  pyproject.toml
src/comps/text_splitter/impl/microservice/.dockerhub/: overview.md
src/comps/tts/impl/microservice/: .env  Dockerfile  Dockerfile.release  pyproject.toml  requirements.txt
src/comps/tts/impl/microservice/.dockerhub/: overview.md  short-description.txt
src/comps/tts/impl/model_server/fastapi/docker/: .dockerignore  .env  Dockerfile  Dockerfile.release  compliance-conf.yml  docker-compose.yaml  pyproject.toml
src/comps/tts/impl/model_server/fastapi/docker/.dockerhub/: overview.md  short-description.txt
telemetry/: README.md
test/: .a.py.swp  output.json  output2.json  tts_handler_test.sh
(+2778 files in other folders)
