# Copyright (C) 2025 Intel Corporation
# SPDX-License-Identifier: Apache-2.0

[project]
name = "Intel_Enterprise_RAG-Docsum_Microservice"
version = "2.0.1"
requires-python = ">=3.11,<3.12"

dependencies = [
    "aiohttp==3.12.14",
    "docarray[full]==0.40.0",
    "fastapi==0.120.2",
    "langchain==0.3.27",
    "langchain-openai==0.3.35",
    "opentelemetry-api==1.25.0",
    "opentelemetry-exporter-otlp==1.25.0",
    "prometheus-fastapi-instrumentator==7.0.0",
    "uvicorn==0.30.1",
    "shortuuid==1.0.13",
    "starlette==0.49.1",
    "python-dotenv==1.1.0"
]

[project.optional-dependencies]
test = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "fastapi==0.120.2",
    "docarray[full]==0.40.0",
    "opentelemetry-api==1.25.0",
    "opentelemetry-exporter-otlp==1.25.0",
    "opentelemetry-sdk==1.25.0",
]
