# Copyright (C) 2025 Intel Corporation
# SPDX-License-Identifier: Apache-2.0

[project]
name = "Intel_Enterprise_RAG-Hierarchical_Dataprep_Microservice"
version = "1.0.1"
requires-python = ">=3.10"

dependencies = [
    "aiohttp==3.10.11",
    "fastapi==0.111.0",
    "opentelemetry-api==1.25.0",
    "opentelemetry-exporter-otlp==1.25.0",
    "opentelemetry-sdk==1.25.0",
    "prometheus-fastapi-instrumentator==7.0.0",
    "numpy==1.26.4",
    "docarray[full]==0.40.0",
    "httpx==0.27.0",
    "uvicorn==0.30.1",
    "huggingface_hub==0.24.5",
    "langchain==0.3.6",
    "langchain-community==0.3.0",
    "langchain-text-splitters==0.3.0",
    "langsmith==0.1.125",
    "pypdf==5.4.0",
    "openai==1.41.0",
    "shortuuid==1.0.13",
    "pathvalidate==3.2.2",
    "torch==2.6.0",
]

[project.optional-dependencies]
cpu = [
  "torch==2.6.0",
  "torchvision==0.21.0",
]
cu124 = [
  "torch==2.6.0",
  "torchvision==0.21.0",
]
test = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "fastapi==0.111.0",
    "docarray[full]==0.40.0",
    "opentelemetry-api==1.25.0",
    "opentelemetry-exporter-otlp==1.25.0",
    "opentelemetry-sdk==1.25.0",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu124" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu124", extra = "cu124" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu124", extra = "cu124" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true