# Copyright (C) 2025-2026 Intel Corporation
# SPDX-License-Identifier: Apache-2.0

[project]
name = "Intel-Enterprise-RAG-Hierarchical_Dataprep_Microservice"
version = "2.0.1"
requires-python = ">=3.11,<3.12"

dependencies = [
    "aiohttp==3.13.3",
    "fastapi==0.120.2",
    "opentelemetry-api==1.25.0",
    "opentelemetry-exporter-otlp==1.25.0",
    "opentelemetry-sdk==1.25.0",
    "prometheus-fastapi-instrumentator==7.0.0",
    "numpy==2.1.0",
    "docarray[full]==0.40.0",
    "httpx==0.28.1",
    "h11==0.16.0",
    "uvicorn==0.30.1",
    "huggingface_hub==0.36.0",
    "filelock == 3.20.3", # dependency of huggingface_hub
    "langchain==1.2.2",
    "langchain-community==0.4.1",
    "langchain-text-splitters==1.1.0",
    "langsmith==0.3.45",
    "pypdf==6.4.0",
    "openai==1.77.0",
    "shortuuid==1.0.13",
    "pathvalidate==3.2.2",
    "torch==2.8.0",
    "torchvision==0.23.0",
    "setuptools == 80.10.2",     # security update
    "starlette==0.49.1",
    "protobuf == 4.25.8",
    "requests == 2.32.5",
    "urllib3 == 2.6.3",
]

[project.optional-dependencies]
test = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "fastapi==0.120.2",
    "docarray[full]==0.40.0",
    "opentelemetry-api==1.25.0",
    "opentelemetry-exporter-otlp==1.25.0",
    "opentelemetry-sdk==1.25.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "torchvision-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "torchvision-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
