# Copyright (C) 2025-2026 Intel Corporation
# SPDX-License-Identifier: Apache-2.0

[project]
name = "Intel-Enterprise-RAG-Ingestion_Microservice"
version = "2.1.0"
requires-python = ">=3.11,<3.12"

dependencies = [
    "Intel-Enterprise-RAG-VectorStores",
    "fastapi==0.120.2",
    "aiohttp==3.13.3",
    "opentelemetry-api==1.25.0",
    "opentelemetry-exporter-otlp==1.25.0",
    "opentelemetry-sdk==1.25.0",
    "prometheus-fastapi-instrumentator==7.0.0",
    "numpy==2.1.0",
    "docarray[full]==0.40.0",
    "uvicorn==0.30.1",
    "starlette==0.49.1",
    "jinja2==3.1.6",
    "python-dotenv==1.1.0",
    "h11==0.16.0",
    "setuptools == 80.10.2",     # security update,
    "urllib3 == 2.6.3",
]

[project.optional-dependencies]
test = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "fastapi==0.120.2",
    "aiohttp==3.13.3",
    "docarray[full]==0.40.0",
    "opentelemetry-api==1.25.0",
    "opentelemetry-exporter-otlp==1.25.0",
    "opentelemetry-sdk==1.25.0",
]

[tool.uv.sources]
Intel-Enterprise-RAG-VectorStores = { path = "../../../vectorstores/impl/requirements" }
