# Copyright (C) 2025 Intel Corporation
# SPDX-License-Identifier: Apache-2.0

[project]
name = "Intel_Enterprise_RAG-Late_Chunking_Microservice"
version = "2.0.1"
requires-python = ">=3.11,<3.12"

dependencies = [
    "aiohttp==3.13.3",
    "docarray[full]==0.40.0",
    "fastapi==0.120.2",
    "h11==0.16.0",
    "huggingface-hub==0.30.0",
    "jinja2==3.1.6",
    "numpy==2.2.1",
    "opentelemetry-api==1.25.0",
    "opentelemetry-exporter-otlp==1.25.0",
    "opentelemetry-sdk==1.25.0",
    "prometheus-fastapi-instrumentator==7.0.0",
    "python-dotenv==1.1.0",
    "requests==2.32.5",
    "shortuuid==1.0.13",
    "starlette==0.49.1",
    "tokenizers==0.21.0",
    "urllib3==2.6.3",
    "uvicorn==0.30.1",
]

[project.optional-dependencies]
test = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "fastapi==0.120.2",
    "docarray==0.40.0",
    "opentelemetry-api==1.25.0",
    "opentelemetry-exporter-otlp==1.25.0",
    "opentelemetry-sdk==1.25.0",
]
