# Copyright (C) 2024-2026 Intel Corporation
# SPDX-License-Identifier: Apache-2.0

[project]
name = "Intel-Enterprise-RAG-Namespace_Status_Watcher_Microservice"
version = "2.1.0"
requires-python = ">=3.11,<3.12"

dependencies = [
    "aiohttp==3.12.14",
    "docarray[full]==0.40.0",
    "fastapi==0.120.2",
    "kubernetes==31.0.0",
    "opentelemetry-api==1.25.0",
    "opentelemetry-exporter-otlp==1.25.0",
    "prometheus-fastapi-instrumentator==7.0.0",
    "python-dotenv==1.1.0",
    "starlette==0.49.3",
    "shortuuid==1.0.13",
    "uvicorn==0.30.1",
]
