# Copyright (C) 2025-2026 Intel Corporation
# SPDX-License-Identifier: Apache-2.0

[project]
name = "Intel-Enterprise-RAG-Text_Extractor_Microservice"
version = "2.1.0"
requires-python = ">=3.11,<3.12"

dependencies = [
    "fastapi==0.120.2",
    "opentelemetry-api==1.25.0",
    "opentelemetry-exporter-otlp==1.25.0",
    "opentelemetry-sdk==1.25.0",
    "prometheus-fastapi-instrumentator==7.0.0",
    "numpy==2.1.0",
    "docarray[full]==0.40.0",
    "uvicorn==0.30.1",
    "beautifulsoup4==4.12.3",
    "huggingface_hub==0.36.0",
    "filelock == 3.20.3", # dependency of huggingface_hub
    "langchain==1.2.2",
    "langchain-community==0.4.1",
    "marshmallow==3.26.2", # dependency of langchain_community
    "langchain-text-splitters==1.1.0",
    "langsmith==0.3.45",
    "markdown==3.0.0",
    "olefile==0.47",
    "pandas==2.2.2",
    "Pillow==11.3.0",
    "pymupdf==1.27.1",
    "pymupdf4llm[layout]==0.2.9",
    "pymupdf-layout==1.27.1",
    "python-bidi==0.4.2",
    "python-docx==1.1.2",
    "python-pptx==1.0.1",
    "pytesseract==0.3.13",
    "regex==2025.11.3",
    "sentence_transformers==3.0.1",
    "shortuuid==1.0.13",
    "unstructured[all-docs]==0.17.2",
    "pdfminer-six==20260107", # dependency of all-docs
    "pyasn1==0.6.2", # dependency of unstructured
    "cairosvg==2.7.1",
    "python-magic==0.4.27",
    "pathvalidate==3.2.2",
    "langchain-experimental==0.4.1",
    "langchain-huggingface==1.2.0",
    "starlette==0.49.1",
    "jinja2==3.1.6",
    "python-dotenv==1.1.0",
    "torch==2.8.0",
    "torchvision==0.23.0",
    "h11==0.16.0",
    "transformers==4.53.0",
    "markitdown==0.1.2",
    "setuptools == 80.10.2",     # security update
    "requests == 2.32.5",
    "urllib3 == 2.6.3",
    "opencv-python==4.12.0.88",
    "aiohttp == 3.13.3",
]

[project.optional-dependencies]
test = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "fastapi==0.120.2",
    "docarray[full]==0.40.0",
    "opentelemetry-api==1.25.0",
    "opentelemetry-exporter-otlp==1.25.0",
    "opentelemetry-sdk==1.25.0",
    "setuptools==80.10.2",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "torchvision-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "torchvision-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
