# Copyright (C) 2025 Intel Corporation
# SPDX-License-Identifier: Apache-2.0

[project]
name = "Intel_Enterprise_RAG-Text_Splitter_Microservice"
version = "2.0"
requires-python = ">=3.11,<3.12"

dependencies = [
    "fastapi==0.120.2",
    "aiohttp == 3.12.14",
    "opentelemetry-api==1.25.0",
    "opentelemetry-exporter-otlp==1.25.0",
    "opentelemetry-sdk==1.25.0",
    "prometheus-fastapi-instrumentator==7.0.0",
    "numpy==2.1.0",
    "docarray[full]==0.40.0",
    "uvicorn==0.30.1",
    "huggingface_hub==0.34.0",
    "langchain==0.3.27",
    "langchain-community==0.3.27",
    "langchain-text-splitters==0.3.9",
    "langsmith==0.3.45",
    "sentence_transformers==3.0.1",
    "shortuuid==1.0.13",
    "langchain-experimental==0.3.4",
    "langchain-huggingface==0.1.2",
    "starlette==0.49.1",
    "jinja2==3.1.6",
    "python-dotenv==1.1.0",
    "torch==2.8.0",
    "h11==0.16.0",
    "transformers==4.55.4",
    "requests==2.32.4",
    "setuptools == 80.9.0",     # security update
    "protobuf == 4.25.8",
    "urllib3 == 2.5.0",
]

[project.optional-dependencies]
test = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "fastapi==0.120.2",
    "docarray[full]==0.40.0",
    "opentelemetry-api==1.25.0",
    "opentelemetry-exporter-otlp==1.25.0",
    "opentelemetry-sdk==1.25.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
