# Copyright (C) 2025-2026 Intel Corporation
# SPDX-License-Identifier: Apache-2.0

[project]
name = "Intel-Enterprise-RAG-Embedding-Torchserve"
version = "2.0.1"
requires-python = ">=3.10"

dependencies = [
    "intel-openmp==2025.0.5",
    "mosec==0.9.2",
    "llmspec==0.3.18",
    "torch==2.8.0",
    "transformers==4.55.4",
    "filelock == 3.20.3", # dependency of huggingface_hub
    "intel-extension-for-pytorch==2.8.0",
    "hypothesis==6.82.0",
    "cmake>=3.13.0",
    "ninja==1.11.1",
    "wheel>=0.46.2",
    "setuptools>=50.0",
    "packaging==24.0",
    "psutil==5.9.5",
    "expecttest==0.3.0",
    "setuptools == 80.10.2",     # security update
    "requests == 2.32.5",
    "urllib3 == 2.6.3",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
