# Copyright (C) 2025-2026 Intel Corporation
# SPDX-License-Identifier: Apache-2.0

[project]
name = "Intel-Enterprise-RAG-Embedding-OpenVINO"
version = "2.0.1"
requires-python = ">=3.11,<3.12"

dependencies = [
    "openvino_tokenizers==2025.0.0.0",
    "optimum-intel==1.25.2",
    "torch==2.8.0",
    "jinja2 == 3.1.6",
    "MarkupSafe==3.0.2",
    "setuptools == 80.10.2",     # security update
    "protobuf == 4.25.8",
    "requests == 2.32.5",
    "urllib3 == 2.6.3",
    "aiohttp == 3.13.3",
    "transformers == 4.53.3",
    "filelock == 3.20.3", # dependency of huggingface_hub
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
